Fix dropdown-menu z-index

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -43,6 +43,10 @@ body {
   max-width: none !important;
 }
 
+.dropdown-menu {
+  z-index: 2000;
+}
+
 @import 'app/common/variables';
 @import 'app/common/keyframes';
 @import 'app/helpers/*';
